Setup notebook for first part

--- a/Loading the data.ipynb
+++ b/Loading the data.ipynb
@@ -16,39 +16,53 @@
     "\n",
     "trainData = json.loads(trainJson)\n",
     "devData = json.loads(devJson)\n",
-    "test"
+    "testData = json.loads(testJson)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "360"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(trainData)"
+    "# Lets get the data into a nicer format:\n",
+    "def changeToList(dataset):\n",
+    "    listOfQAs = []\n",
+    "    for qa in dataset:\n",
+    "        qList = qa[\"qa\"]\n",
+    "        QAs = []\n",
+    "        for q in qList:\n",
+    "            QAs.append(q)\n",
+    "        listOfQAs.append(QAs)\n",
+    "    return listOfQAs\n",
+    "\n",
+    "train = changeToList(trainData)\n",
+    "dev = changeToList(devData)\n",
+    "test = changeToList(testData)\n",
+    "\n",
+    "# We have the questions, lets get the sentences:\n",
+    "\n",
+    "def getSentList(dataset):\n",
+    "    listOfSentLists = []\n",
+    "    for qa in dataset:\n",
+    "        listOfSentLists.append(qa[\"sentences\"])\n",
+    "    return listOfSentLists\n",
+    "        \n",
+    "trainSents = getSentList(trainData)\n",
+    "devSents = getSentList(devData)\n",
+    "testSents = getSentList(testData)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "There are 70159 training QA pairs, 8463 in dev, 8974 in test"
+   ]
   }
  ],
  "metadata": {
