--- a/Loading the data.ipynb
+++ b/Loading the data.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -66,10 +66,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [py27]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [py27]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -81,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
