Basic setting up of standford ner tagger, with example

--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -437,19 +437,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The second main part of your basic QA system is an NER system. In this initial system you should have at least four\n",
+    "answer types: PERSON, LOCATION, NUMBER, and OTHER. You should run the Stanford NER system over your\n",
+    "sentences to extract people and location entities (Hint: make use of the \"tag_sents\" method in the NLTK interface to do\n",
+    "this efficiently for multiple sentences in a single call, otherwise this will be very slow; you may also want to cache the\n",
+    "entity information during development of your system, rather than calling Stanford NER for each run). Note that\n",
+    "contiguous words tagged as the same type should be considered part of the same entity. ORGANIZATION entities\n",
+    "extracted by the NER system should be considered OTHER. You should also extract and treat as OTHER any other\n",
+    "non-sentence initial sequence of capitalized words not tagged by Stanford NER. Finally, you should label all numbers as\n",
+    "NUMBER. In this process, you might notice errors related to your preprocessing (e.g. tokenization), errors which can be\n",
+    "easily corrected should be addressed at this stage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### TODO\n",
     "\n",
-    "* TODO"
+    "* Finish NER Tagging "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from nltk.tag import StanfordNERTagger\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "# The required jar files : https://nlp.stanford.edu/software/CRF-NER.shtml#Download\n",
+    "# It's 171mb so I've added to the gitignore\n",
+    "# If you download it, and rename the folder name \"stanford\" in the main directory\n",
+    "classifier = './stanford/classifiers/english.all.3class.distsim.crf.ser.gz'\n",
+    "jar = './stanford/stanford-ner.jar'\n",
+    "\n",
+    "sTagger = StanfordNERTagger(classifier,jar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(u'There', u'O'), (u'were', u'O'), (u'three', u'O'), (u'geese', u'O'), (u',', u'O'), (u'Derek', u'PERSON'), (u',', u'O'), (u'Joshi', u'PERSON'), (u',', u'O'), (u'and', u'O'), (u'Alex', u'PERSON'), (u',', u'O'), (u'who', u'O'), (u'lived', u'O'), (u'in', u'O'), (u'Melbourne', u'LOCATION'), (u',', u'O'), (u'and', u'O'), (u'worked', u'O'), (u'at', u'O'), (u'Microsoft', u'ORGANIZATION')]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Quick test of Tagger\n",
+    "text = \"There were three geese, Derek, Joshi, and Alex, who lived in Melbourne, and worked at Microsoft\"\n",
+    "tokenizedText = word_tokenize(text)\n",
+    "classifiedText = sTagger.tag_sents([tokenizedText])\n",
+    "\n",
+    "# Warning, it takes a little while ~ 5 seconds on my comp\n",
+    "print(classifiedText)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def nerTag(sents, index):\n",
+    "    tokenisedSents = [word_tokenize(sent) for sent in sents]\n",
+    "    classifiedSents = sTagger.tag_sents(tokenisedSents)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -480,9 +545,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [py27]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [py27]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -494,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
