Made function for storing the stanford parsing results to a file. My poor little pentium is struggling, anyone got a beefier comp?

--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -505,15 +505,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pickle # Useful for read / write of list file\n",
+    "import os #Needed to check if file exists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def nerTag(sents, index):\n",
-    "    tokenisedSents = [word_tokenize(sent) for sent in sents]\n",
-    "    classifiedSents = sTagger.tag_sents(tokenisedSents)"
+    "# Lets store the stanford tagger output in a file\n",
+    "# This function returns the tagging output of stanford for each dataset\n",
+    "# with datasetName - 'train', 'dev', test' \n",
+    "\n",
+    "def getStandFordTagging(datasetName):\n",
+    "    fnameTrain = './preCompTags/stanfordTaggedTrain.txt'\n",
+    "    fnameDev = './preCompTags/stanfordTaggedDev.txt'\n",
+    "    fnameTest = './preCompTags/stanfordTaggedTest.txt'\n",
+    "    \n",
+    "    theFilePath = ''\n",
+    "    theSents = []\n",
+    "    if (datasetName == 'train'):\n",
+    "        theFilePath = fnameTrain\n",
+    "        theSents = trainSents\n",
+    "    elif (datasetName == 'dev'):\n",
+    "        theFilePath = fnameDev\n",
+    "        theSents = devSents\n",
+    "    elif (datasetName == 'test'):\n",
+    "        theFilePath = fnameTest\n",
+    "        theSents = testSents\n",
+    "    else :\n",
+    "        raise ValueError('Incorrect datasetName: ' + datasetName + ', choose from - \"train\", \"dev\", \"test\" ')\n",
+    "        \n",
+    "    if (os.path.exists(theFilePath)):\n",
+    "        with open(theFilePath, \"rb\") as fp:\n",
+    "            stanfordTags = pickle.load(fp)\n",
+    "            return stanfordTags\n",
+    "    \n",
+    "    else :\n",
+    "        #Need to create taggings!\n",
+    "        taggedSentsList = []\n",
+    "        for sents in theSents:\n",
+    "            tokenisedSents = [word_tokenize(sent) for sent in sents]\n",
+    "            classifiedSents = sTagger.tag_sents(tokenisedSents)\n",
+    "            taggedSentsList.append(classifiedSents)\n",
+    "        #And save them\n",
+    "        with open(theFilePath, \"wb\") as fp: \n",
+    "            pickle.dump(taggedSentsList, fp)\n",
+    "        return taggedSentsList\n",
+    "    "
    ]
   },
   {
