Added function to group similar tags

--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -455,7 +455,10 @@
    "source": [
     "##### TODO\n",
     "\n",
-    "* Finish NER Tagging "
+    "* Finish NER Tagging \n",
+    "* Finish isNumber \n",
+    "* Test run stanford function on another machine (+ record times)\n",
+    "* "
    ]
   },
   {
@@ -505,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -517,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -527,7 +530,7 @@
     "# This function returns the tagging output of stanford for each dataset\n",
     "# with datasetName - 'train', 'dev', test' \n",
     "\n",
-    "def getStandFordTagging(datasetName):\n",
+    "def getStanfordTagging(datasetName):\n",
     "    fnameTrain = './preCompTags/stanfordTaggedTrain.txt'\n",
     "    fnameDev = './preCompTags/stanfordTaggedDev.txt'\n",
     "    fnameTest = './preCompTags/stanfordTaggedTest.txt'\n",
@@ -544,8 +547,7 @@
     "        theFilePath = fnameTest\n",
     "        theSents = testSents\n",
     "    else :\n",
-    "        raise ValueError('Incorrect datasetName: ' + datasetName + ', choose from - \"train\", \"dev\", \"test\" ')\n",
-    "        \n",
+    "        raise ValueError('Incorrect datasetName: ' + datasetName + ', choose from - \"train\", \"dev\", \"test\" ') \n",
     "    if (os.path.exists(theFilePath)):\n",
     "        with open(theFilePath, \"rb\") as fp:\n",
     "            stanfordTags = pickle.load(fp)\n",
@@ -566,11 +568,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "taggedTrain = getStanfordTagging('train')\n",
+    "taggedDev = getStanfordTagging('dev')\n",
+    "taggedTest = getStanfordTagging('test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Given a stanford tagged list, refines the list by:\n",
+    "# Grouping all contiguous words with the same tag\n",
+    "# Relabels Organisations as Other\n",
+    "# Labels Number\n",
+    "\n",
+    "def refineWordTags(taggedWordList):\n",
+    "    newWordTags = []\n",
+    "    prevWord = ''\n",
+    "    prevTag = taggedWordList[0][1] # Ie the first tag\n",
+    "    for (word, tag) in taggedWordList:\n",
+    "        if (tag == 'ORGANIZATION'):\n",
+    "            tag = 'O'\n",
+    "        if (tag == 'O'):\n",
+    "            #Might be a number\n",
+    "            if isNumber(word):\n",
+    "                tag = 'NUMBER'\n",
+    "        if (tag == prevTag):\n",
+    "            prevWord += ' ' + word\n",
+    "        else :\n",
+    "            newWordTags.append((prevWord, prevTag))\n",
+    "            prevWord = word\n",
+    "            prevTag = tag\n",
+    "    # Need to add the final ones\n",
+    "    newWordTags.append((prevWord, prevTag))\n",
+    "    return newWordTags\n",
+    "        \n",
+    "\n",
+    "# Returns true if the word represents a number\n",
+    "def isNumber(word):\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u' Raleigh ( \\u02c8r\\u0251\\u02d0li ; RAH-lee ) is the capital of the state of',\n",
+       "  u'O'),\n",
+       " (u'North Carolina', u'LOCATION'),\n",
+       " (u'as well as the seat of', u'O'),\n",
+       " (u'Wake County', u'LOCATION'),\n",
+       " (u'in the', u'O'),\n",
+       " (u'United States', u'LOCATION'),\n",
+       " (u'.', u'O')]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Small test:\n",
+    "refineWordTags(taggedTrain[1][0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Answer Ranking"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
