Added small regex test

--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -456,9 +456,7 @@
     "##### TODO\n",
     "\n",
     "* Finish NER Tagging \n",
-    "* Finish isNumber \n",
-    "* Test run stanford function on another machine (+ record times)\n",
-    "* "
+    "* Test run stanford function on another machine (+ record times)"
    ]
   },
   {
@@ -627,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -636,36 +634,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(u'Raleigh', u'O'), (u'(', u'O'), (u'\\u02c8r\\u0251\\u02d0li', u'O'), (u';', u'O'), (u'RAH-lee', u'O'), (u')', u'O'), (u'is', u'O'), (u'the', u'O'), (u'capital', u'O'), (u'of', u'O'), (u'the', u'O'), (u'state', u'O'), (u'of', u'O'), (u'North', u'LOCATION'), (u'Carolina', u'LOCATION'), (u'as', u'O'), (u'well', u'O'), (u'as', u'O'), (u'the', u'O'), (u'seat', u'O'), (u'of', u'O'), (u'Wake', u'LOCATION'), (u'County', u'LOCATION'), (u'in', u'O'), (u'the', u'O'), (u'United', u'LOCATION'), (u'States', u'LOCATION'), (u'.', u'O')]\n"
+      "[(u'Raleigh', u'O'), (u'(', u'O'), (u'\\u02c8r\\u0251\\u02d0li', u'O'), (u';', u'O'), (u'RAH-lee', u'O'), (u')', u'O'), (u'is', u'O'), (u'the', u'O'), (u'capital', u'O'), (u'of', u'O'), (u'the', u'O'), (u'state', u'O'), (u'of', u'O'), (u'North', u'LOCATION'), (u'Carolina', u'LOCATION'), (u'as', u'O'), (u'well', u'O'), (u'as', u'O'), (u'the', u'O'), (u'seat', u'O'), (u'of', u'O'), (u'Wake', u'LOCATION'), (u'County', u'LOCATION'), (u'in', u'O'), (u'the', u'O'), (u'United', u'LOCATION'), (u'States', u'LOCATION'), (u'.', u'O')]\n",
+      "\n",
+      "[(u' Raleigh ( \\u02c8r\\u0251\\u02d0li ; RAH-lee ) is the capital of the state of', u'O'), (u'North Carolina', u'LOCATION'), (u'as well as the seat of', u'O'), (u'Wake County', u'LOCATION'), (u'in the', u'O'), (u'United States', u'LOCATION'), (u'.', u'O')]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(u' Raleigh ( \\u02c8r\\u0251\\u02d0li ; RAH-lee ) is the capital of the state of',\n",
-       "  u'O'),\n",
-       " (u'North Carolina', u'LOCATION'),\n",
-       " (u'as well as the seat of', u'O'),\n",
-       " (u'Wake County', u'LOCATION'),\n",
-       " (u'in the', u'O'),\n",
-       " (u'United States', u'LOCATION'),\n",
-       " (u'.', u'O')]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Small test:\n",
     "print (taggedTrain[1][0])\n",
-    "refineWordTags(taggedTrain[1][0])"
+    "print\n",
+    "print refineWordTags(taggedTrain[1][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -678,7 +662,10 @@
       "True\n",
       "True\n",
       "True\n",
-      "False\n"
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
      ]
     }
    ],
@@ -689,30 +676,9 @@
     "print isNumber('163.2342.234  ')\n",
     "print isNumber('123,123,123.2  ')\n",
     "print isNumber('joshi')\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str.isdigit('1.99')"
+    "print isNumber('$123')\n",
+    "print isNumber('four')\n",
+    "print isNumber('h123') # Should this be a number?"
    ]
   },
   {
@@ -723,13 +689,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "After you have extracted a set of entities from your sentence, you will rank them to choose the best answer. The ranking\n",
+    "should be based on three factors. First, answers whose content words all appear in the question should be ranked\n",
+    "lowest. Second, answers which match the question type should be ranked higher than those that don't; for this, you\n",
+    "should build a simple rule-based question type classifier based on key words (e.g. questions which contain \"who\" are\n",
+    "people). Third, among entities of the same type, the prefered entity should be the one which is closer in the sentence to a\n",
+    "closed-class word from the question."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -742,12 +713,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Part A gives us a most likely sentence\n",
+    "# Part B splits into entities\n",
+    "\n",
+    "# Given a question, returns a tag for the answer form\n",
+    "# From PERSON, LOCATION, NUMBER, OTHER \n",
+    "# Assuming question is lowercased\n",
+    "def getQuestionType(question):\n",
+    "    if 'who' in question:\n",
+    "        return \"PERSON\"\n",
+    "    if 'where' in question:\n",
+    "        return \"LOCATION\"\n",
+    "    return \"OTHER\""
+   ]
   }
  ],
  "metadata": {
