--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -677,7 +677,7 @@
     "print isNumber('123,123,123.2  ')\n",
     "print isNumber('joshi')\n",
     "print isNumber('$123')\n",
-    "print isNumber('four')\n",
+    "print isNumber('four') # I guess ideally this should be true\n",
     "print isNumber('h123') # Should this be a number?"
    ]
   },
@@ -713,7 +713,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "vectorize_query() takes exactly 2 arguments (1 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-dcb5a7c49fe9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvectorize_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"What is your name there son?\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: vectorize_query() takes exactly 2 arguments (1 given)"
+     ]
+    }
+   ],
+   "source": [
+    "vectorize_query(\"What is your name there son?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -721,6 +744,7 @@
    "source": [
     "# Part A gives us a most likely sentence\n",
     "# Part B splits into entities\n",
+    "\n",
     "\n",
     "# Given a question, returns a tag for the answer form\n",
     "# From PERSON, LOCATION, NUMBER, OTHER \n",
@@ -732,6 +756,101 @@
     "        return \"LOCATION\"\n",
     "    return \"OTHER\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation \n",
+    "I've added the evaluation here to save exporting the above functions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sentence Retrival\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Where numToEval is max 360 for train\n",
+    "def evaluateSentenceRetrival(questionsList,documentsList, numToEval):\n",
+    "    numCorrect = 0\n",
+    "    numWrong = 0\n",
+    "    for i in range (0, numToEval):\n",
+    "        documents = documentsList[i]\n",
+    "        questions = questionsList[i]\n",
+    "        \n",
+    "        vector_documents, vectorizer = vectorize_documents(documents)\n",
+    "        analyze = vectorizer.build_analyzer()\n",
+    "        neighbours = process_neighbours(vector_documents)\n",
+    "        \n",
+    "        for j in range (0, len(questions)):\n",
+    "            text_query = questions[j][\"question\"]\n",
+    "            vector_query = vectorize_query(vectorizer, text_query)\n",
+    "            result_similarity, result_index  = closest_document(neighbours, vector_query)\n",
+    "            if result_index == int(questions[j][\"answer_sentence\"]):\n",
+    "                numCorrect += 1\n",
+    "            else :\n",
+    "                numWrong += 1\n",
+    "    return (numCorrect, numWrong)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(905, 756)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluateSentenceRetrival(train, trainSents,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
