Update for derek

--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -823,7 +823,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number Correct : 905\n",
+      "Number incorrect: 756\n",
+      "Average correct : 0.544852498495\n"
+     ]
+    }
+   ],
+   "source": [
+    "(cor, wrong) = evaluateSentenceRetrival(train, trainSents,10)\n",
+    "print(\"Number Correct : \" + str(cor))\n",
+    "print(\"Number incorrect: \" + str(wrong))\n",
+    "print (\"Average correct : \" + str((cor + 0.0) / (cor+wrong)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -831,16 +855,46 @@
     {
      "data": {
       "text/plain": [
-       "(905, 756)"
+       "(4864, 3599)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluateSentenceRetrival(train, trainSents,10)"
+    "evaluateSentenceRetrival(dev, devSents,40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'answer': u'long playing', u'question': u'What does LP stand for when it comes to time capacity?', u'answer_sentence': 2}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "u'Phonograph records are generally described by their diameter in inches (12\", 10\", 7\"), the rotational speed in rpm at which they are played (16 2\\u20443, 33 1\\u20443, 45, 78), and their time capacity resulting from a combination of those parameters (LP \\u2013 long playing 33 1\\u20443 rpm, SP \\u2013 78 rpm single, EP \\u2013 12-inch single or extended play, 33 or 45 rpm); their reproductive quality or level of fidelity (high-fidelity, orthophonic, full-range, etc.), and the number of audio channels provided (mono, stereo, quad, etc.).'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(train[0][0])\n",
+    "trainSents[0][2]"
    ]
   },
   {
