Changed to Dev set

--- a/Basic QA System - Performance Evaluation.ipynb
+++ b/Basic QA System - Performance Evaluation.ipynb
@@ -47,10 +47,10 @@
    },
    "outputs": [],
    "source": [
-    "(cor, wrong) = evaluateSentenceRetrival(train, trainSents,360)\n",
-    "print(\"Number Correct : \" + str(len(cor)))\n",
-    "print(\"Number incorrect: \" + str(len(wrong)))\n",
-    "print (\"Average correct : \" + str((len(cor) + 0.0) / (len(cor)+len(wrong))))"
+    "(corSR, wrongSR) = evaluateSentenceRetrival(dev, devSents,len(dev))\n",
+    "print(\"Number Correct : \" + str(len(corSR)))\n",
+    "print(\"Number incorrect: \" + str(len(wrongSR)))\n",
+    "print (\"Average correct : \" + str((len(corSR) + 0.0) / (len(corSR)+len(wrongSR))))"
    ]
   },
   {
@@ -112,6 +112,8 @@
    },
    "outputs": [],
    "source": [
+    "(corNER, wrongNER) = evaluateSentenceRetrival(dev, devSents,len(dev))\n",
+    "\n",
     "print(\"Number Correct : \" + str(len(corNER)))\n",
     "print(\"Number incorrect: \" + str(len(wrongNER)))\n",
     "print(\"Average correct : \" + str((len(corNER) + 0.0) / (len(corNER)+len(wrongNER))))"
@@ -139,7 +141,8 @@
    "metadata": {},
    "source": [
     "## Answer Ranking\n",
-    "For each \"correct\" tagging above (ie tags where the answer is a membe"
+    "For each \"correct\" tagging above (ie tags where the answer is a member\n",
+    "Test the answer ranking\n"
    ]
   },
   {
@@ -177,7 +180,7 @@
    },
    "outputs": [],
    "source": [
-    "(corAns, wrongAns) = evaluateAnswerRanking(train, trainSents,100)\n",
+    "(corAns, wrongAns) = evaluateAnswerRanking(dev, devSents,len(dev))\n",
     "print(\"Number Correct : \" + str(len(corAns)))\n",
     "print(\"Number incorrect: \" + str(len(wrongAns)))\n",
     "print (\"Average correct : \" + str((len(corAns) + 0.0) / (len(corAns)+len(wrongAns))))"
