Variable name change

--- a/Basic QA System - Performance Evaluation.ipynb
+++ b/Basic QA System - Performance Evaluation.ipynb
@@ -112,7 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "(corNER, wrongNER) = evaluateSentenceRetrival(dev, devSents,len(dev))\n",
+    "(corNER, wrongNER) = evaluateNER(dev, devSents,len(dev))\n",
     "\n",
     "print(\"Number Correct : \" + str(len(corNER)))\n",
     "print(\"Number incorrect: \" + str(len(wrongNER)))\n",
